# email_newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: init_db.sh
src/: conf.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
