[package]
name = "email_newsletter"
version = "0.0.1"
edition = "2021"
authors = ["mbrav <mbrav@protonmail.com>"]
description = "A email newsletter written in rust"
readme = "README.md"
repository = "https://github.com/mbrav/cargo/email_newsletter"
license-file = "LICENSE"
categories = ["web-programming::http-server", "asynchronous"]
keywords = ["rust", "async", "tokio", "actix-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
