[package]
name = "email_newsletter"
version = "0.0.1"
edition = "2021"
authors = ["mbrav <mbrav@protonmail.com>"]
description = "A email newsletter written in rust"
readme = "README.md"
repository = "https://github.com/mbrav/cargo/email_newsletter"
license-file = "LICENSE"
categories = ["web-programming::http-server", "asynchronous"]
keywords = ["rust", "async", "tokio", "actix-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
